--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
           >
             <li>
               <a
-                href="#"
+                href="index.html"
                 class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
                 aria-current="page"
                 >Home</a
@@ -161,7 +161,7 @@
             </li>
             <li>
               <a
-                href="#"
+                href="service.html"
                 class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
                 >Services</a
               >
@@ -800,11 +800,13 @@
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-              Noteworthy technology acquisitions 2021
+              Service Besar
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Here are the biggest enterprise technology acquisitions of 2021 so
-              far, in reverse chronological order.
+              Layanan service besar meliputi pemeriksaan menyeluruh pada
+              kendaraan, termasuk mesin, sistem kelistrikan, rem, suspensi, dan
+              bagian penting lainnya untuk memastikan performa kendaraan tetap
+              optimal.
             </p>
           </div>
         </a>
@@ -821,11 +823,13 @@
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-              Noteworthy technology acquisitions 2021
+              Service Ringan
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Here are the biggest enterprise technology acquisitions of 2021 so
-              far, in reverse chronological order.
+              Layanan service ringan meliputi pemeriksaan dan perawatan rutin
+              seperti penggantian oli, filter udara, pengecekan aki, serta
+              pengecekan sistem kelistrikan untuk memastikan kendaraan selalu
+              dalam kondisi optimal.
             </p>
           </div>
         </a>
@@ -842,11 +846,12 @@
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-              Noteworthy technology acquisitions 2021
+              Body Repair
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Here are the biggest enterprise technology acquisitions of 2021 so
-              far, in reverse chronological order.
+              Layanan body repair bertujuan untuk memperbaiki kerusakan pada
+              body kendaraan, seperti penyok, goresan, atau kerusakan lainnya
+              akibat kecelakaan atau benturan.
             </p>
           </div>
         </a>
@@ -863,11 +868,13 @@
             <h5
               class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white"
             >
-              Noteworthy technology acquisitions 2021
+              Pembersihan dan Detailing
             </h5>
             <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
-              Here are the biggest enterprise technology acquisitions of 2021 so
-              far, in reverse chronological order.
+              Layanan pembersihan dan detailing bertujuan untuk memberikan
+              perawatan ekstra pada interior dan eksterior kendaraan Anda,
+              dengan pembersihan mendalam yang mencakup waxing, cuci mesin,
+              serta pembersihan kabin yang menyeluruh.
             </p>
           </div>
         </a>
@@ -875,32 +882,27 @@
     </div>
     <!-- pelayanan end -->
 
+    <script>
+      const scrollLinks = document.querySelectorAll('a[href^="#"]');
 
+      scrollLinks.forEach((link) => {
+        link.addEventListener("click", (e) => {
+          e.preventDefault();
 
-    
-<script>
-  const scrollLinks = document.querySelectorAll('a[href^="#"]');
+          const targetId = link.getAttribute("href").substring(1);
+          const targetElement = document.getElementById(targetId);
 
-  scrollLinks.forEach(link => {
-    link.addEventListener('click', (e) => {
-      e.preventDefault(); 
-
-      const targetId = link.getAttribute('href').substring(1); 
-      const targetElement = document.getElementById(targetId); 
-
-      if (targetElement) {
-        gsap.to(window, {
-          scrollTo: targetElement,
-          duration: 1,  
-          ease: "power2.out" 
+          if (targetElement) {
+            gsap.to(window, {
+              scrollTo: targetElement,
+              duration: 1,
+              ease: "power2.out",
+            });
+          }
         });
-      }
-    });
-  });
-</script>
+      });
+    </script>
 
-
-     
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="../path/to/flowbite/dist/flowbite.js"></script>
   </body>
