--- a/public/service.html
+++ b/public/service.html
@@ -35,7 +35,7 @@
         class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
       >
         <a
-          href="https://flowbite.com/"
+          href="form-pemesanan.html"
           class="flex items-center space-x-3 rtl:space-x-reverse"
         >
           <img
@@ -45,7 +45,7 @@
           />
           <span
             class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Flowbite</span
+            >Pesan Disini</span
           >
         </a>
         <div class="flex md:order-2">
@@ -305,6 +305,8 @@
         </div>
       </div>
     </div>
+    
+Cyan to blue
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
     <script src="../path/to/flowbite/dist/flowbite.js"></script>
   </body>
