--- a/public/index.html
+++ b/public/index.html
@@ -485,7 +485,7 @@
             <a href="#">
               <img
                 class="w-full rounded-lg sm:rounded-none sm:rounded-l-lg"
-                src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/avatars/jese-leos.png"
+                src="img/rojali.png"
                 alt="Jese Avatar"
               />
             </a>
@@ -493,7 +493,7 @@
               <h3
                 class="text-xl font-bold tracking-tight text-gray-900 dark:text-white"
               >
-                <a href="#">Jese Leos</a>
+                <a href="#">Muhamad Rojali</a>
               </h3>
               <span class="text-gray-500 dark:text-gray-400">CTO</span>
               <p class="mt-3 mb-4 font-light text-gray-500 dark:text-gray-400">
