--- a/public/service.html
+++ b/public/service.html
@@ -27,150 +27,134 @@
       }
     </script>
   </head>
-  < class="scroll-smooth bg-gray-100 dark:bg-gray-800">
+  <class="scroll-smooth bg-gray-100 dark:bg-gray-800">
     <nav
-      class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 w-full z-50"
+  class="bg-white border-gray-200 dark:bg-gray-900 fixed top-0 w-full z-50 shadow"
+>
+  <div
+    class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+  >
+    <!-- Logo -->
+    <a
+      href="#"
+      class="flex items-center space-x-3 rtl:space-x-reverse"
     >
-      <div
-        class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+      <img
+        src="https://flowbite.com/docs/images/logo.svg"
+        class="h-8"
+        alt="Logo"
+      />
+      <span
+        class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
+        >MyWebsite</span
       >
-        <a
-          href="form-pemesanan.html"
-          class="flex items-center space-x-3 rtl:space-x-reverse"
-        >
-          <img
-            src="https://flowbite.com/docs/images/logo.svg"
-            class="h-8"
-            alt="Flowbite Logo"
-          />
-          <span
-            class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-            >Pesan Disini</span
-          >
-        </a>
-        <div class="flex md:order-2">
-          <button
-            type="button"
-            data-collapse-toggle="navbar-search"
-            aria-controls="navbar-search"
-            aria-expanded="false"
-            class="md:hidden text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 rounded-lg text-sm p-2.5 me-1"
-          >
-            <svg
-              class="w-5 h-5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 20 20"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-              />
-            </svg>
-            <span class="sr-only">Search</span>
-          </button>
-          <div class="relative hidden md:block">
-            <div
-              class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none"
-            >
-              <svg
-                class="w-4 h-4 text-gray-500 dark:text-gray-400"
-                aria-hidden="true"
-                xmlns="http://www.w3.org/2000/svg"
-                fill="none"
-                viewBox="0 0 20 20"
-              >
-                <path
-                  stroke="currentColor"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
-                />
-              </svg>
-              <span class="sr-only">Search icon</span>
-            </div>
-            <input
-              type="text"
-              id="search-navbar"
-              class="block w-full p-2 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-              placeholder="Search..."
-            />
-          </div>
-          <button
-            data-collapse-toggle="navbar-search"
-            type="button"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
-            aria-controls="navbar-search"
-            aria-expanded="false"
-          >
-            <span class="sr-only">Open main menu</span>
-            <svg
-              class="w-5 h-5"
-              aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 17 14"
-            >
-              <path
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                d="M1 1h15M1 7h15M1 13h15"
-              />
-            </svg>
-          </button>
-        </div>
+    </a>
+
+    <!-- Search and Mobile Menu Button -->
+    <div class="flex md:order-2">
+      <!-- Search Bar (Desktop) -->
+      <div class="relative hidden md:block">
         <div
-          class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
-          id="navbar-search"
+          class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
         >
-          <ul
-            class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700"
+          <svg
+            class="w-5 h-5 text-gray-500 dark:text-gray-400"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 20 20"
           >
-            <li>
-              <a
-                href="index.html"
-                class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500"
-                aria-current="page"
-                >Home</a
-              >
-            </li>
-            <li>
-              <a
-                href="about.html"
-                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >About</a
-              >
-            </li>
-            <li>
-              <a
-                href="service.html"
-                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Services</a
-              >
-            </li>
-            <li>
-              <a
-                href="login.html"
-                class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
-                >Login</a
-              >
-            </li>
-          </ul>
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"
+            />
+          </svg>
         </div>
+        <input
+          type="text"
+          id="search-navbar"
+          class="block w-64 p-2 pl-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="Search..."
+        />
       </div>
-    </nav>
+
+      <!-- Mobile Menu Button -->
+      <button
+        data-collapse-toggle="navbar-search"
+        type="button"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+        aria-controls="navbar-search"
+        aria-expanded="false"
+      >
+        <span class="sr-only">Open main menu</span>
+        <svg
+          class="w-5 h-5"
+          aria-hidden="true"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 17 14"
+        >
+          <path
+            stroke="currentColor"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            stroke-width="2"
+            d="M1 1h15M1 7h15M1 13h15"
+          />
+        </svg>
+      </button>
+    </div>
+
+    <!-- Menu Items -->
+    <div
+      class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1"
+      id="navbar-search"
+    >
+      <ul
+        class="flex flex-col md:flex-row md:space-x-4 font-medium bg-gray-50 md:bg-white rounded-lg md:border-0 md:mt-0 p-4 md:p-0 dark:bg-gray-800 md:dark:bg-gray-900"
+      >
+        <!-- Home -->
+        <li>
+          <a
+            href="index.html"
+            class="block py-2 px-4 rounded-lg hover:bg-blue-500 hover:text-white transition duration-200 dark:hover:bg-blue-500 dark:hover:text-white"
+            >Home</a
+          >
+        </li>
+        <!-- About -->
+        <li>
+          <a
+            href="about.html"
+            class="block py-2 px-4 rounded-lg hover:bg-blue-500 hover:text-white transition duration-200 dark:hover:bg-blue-500 dark:hover:text-white"
+            >About</a
+          >
+        </li>
+        <!-- Services -->
+        <li>
+          <a
+            href="service.html"
+            class="block py-2 px-4 rounded-lg bg-blue-500 text-white dark:bg-blue-500 dark:text-white"
+            >Services</a
+          >
+        </li>
+        <!-- Login -->
+        <li>
+          <a
+            href="login.html"
+            class="block py-2 px-4 rounded-lg hover:bg-blue-500 hover:text-white transition duration-200 dark:hover:bg-blue-500 dark:hover:text-white"
+            >Login</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
  <div class="pt-20">
-      <!-- Container for all cards, added max-width and center alignment -->
       <div class="container mx-auto px-4 sm:px-8">
-        <!-- Use grid with only one column for all devices -->
         <div class="grid grid-cols-1 gap-8">
           <!-- Card 1 -->
           <div class="flex justify-center items-center">
@@ -183,7 +167,6 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                   Layanan service besar meliputi pemeriksaan menyeluruh pada kendaraan, termasuk mesin, sistem kelistrikan, rem, suspensi, dan bagian penting lainnya untuk memastikan performa kendaraan tetap optimal.
                 </p>
-                <!-- Content to hide -->
                 <div id="extra-content-1" class="text-gray-700 dark:text-gray-400" style="display: none;">
                   <p>
                     Proses Service Besar:
@@ -197,7 +180,6 @@
                         </ol>
                   </p>
                 </div>
-                <!-- Button to toggle content -->
                 <button id="see-more-btn-1" class="text-blue-500 hover:text-blue-700 mt-2" onclick="toggleContent(1)">
                   Lihat Selengkapnya
                 </button>
@@ -216,7 +198,6 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                   Layanan service kecil mencakup perawatan rutin seperti ganti oli, pengecekan sistem kelistrikan, dan pengecekan sistem rem untuk menjaga performa kendaraan.
                 </p>
-                <!-- Content to hide -->
                 <div id="extra-content-2" class="text-gray-700 dark:text-gray-400" style="display: none;">
 
 <p>
@@ -230,7 +211,6 @@
   </ol>
 </p>
                 </div>
-                <!-- Button to toggle content -->
                 <button id="see-more-btn-2" class="text-blue-500 hover:text-blue-700 mt-2" onclick="toggleContent(2)">
                   Lihat Selengkapnya
                 </button>
@@ -249,7 +229,6 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                   Layanan body repair untuk perbaikan bodi kendaraan yang rusak, baik itu karena kecelakaan atau kerusakan lainnya.
                 </p>
-                <!-- Content to hide -->
                 <div id="extra-content-3" class="text-gray-700 dark:text-gray-400" style="display: none;">
                   <p>
   Proses Body Repair:
@@ -262,7 +241,6 @@
   </ol>
 </p>
                 </div>
-                <!-- Button to toggle content -->
                 <button id="see-more-btn-3" class="text-blue-500 hover:text-blue-700 mt-2" onclick="toggleContent(3)">
                   Lihat Selengkapnya
                 </button>
@@ -281,7 +259,6 @@
                 <p class="mb-3 font-normal text-gray-700 dark:text-gray-400">
                   Layanan pembersihan dan detailing kendaraan untuk menjaga kebersihan dan kondisi mobil tetap prima.
                 </p>
-                <!-- Content to hide -->
                 <div id="extra-content-4" class="text-gray-700 dark:text-gray-400" style="display: none;">
                   <p>
   Proses Pembersihan & Detailing:
@@ -295,7 +272,6 @@
   </ol>
 </p>
                 </div>
-                <!-- Button to toggle content -->
                 <button id="see-more-btn-4" class="text-blue-500 hover:text-blue-700 mt-2" onclick="toggleContent(4)">
                   Lihat Selengkapnya
                 </button>
