--- a/public/about.html
+++ b/public/about.html
@@ -19,7 +19,6 @@
   >
     <!-- Logo -->
     <a
-      href="#"
       class="flex items-center space-x-3 rtl:space-x-reverse"
     >
       <img
@@ -29,10 +28,9 @@
       />
       <span
         class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white"
-        >MyWebsite</span
+        >Bengkel ..</span
       >
     </a>
-
     <!-- Search and Mobile Menu Button -->
     <div class="flex md:order-2">
       <!-- Search Bar (Desktop) -->
